tests/ui/consts/const-array-oob.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-array-oob.rs:5:19
   |
LL | const BLUB: [u32; FOO[4]] = [5, 6];
   |                   ^^^^^^ index out of bounds: the length is 3 but the index is 4

error[E0080]: evaluation of constant value failed
  --> $DIR/const-array-oob.rs:2:20
   |
LL | const BAR: usize = FOO[5];
   |                    ^^^^^^ index out of bounds: the length is 3 but the index is 5

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
